overflow fixed

--- a/block2/monster_faces/partials/_images.scss
+++ b/block2/monster_faces/partials/_images.scss
@@ -2,6 +2,11 @@
 .body, .face{
     border-radius: 10px;
     margin:.5rem;
+    width:200%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 // blue body styling
 #blueBody{
@@ -25,8 +30,36 @@
 .face{
     background-color: $background;
     border: 1px solid black;
-    padding:1rem;
+    padding:2rem;
+
+    img{
+        max-width: 120px;
+
+        @include MQ(M){
+            max-width: 150px;
+
+        }
+        @include MQ(L){
+            max-width: 100%;
+
+        }
+    
+    }
 }
-img{
-    max-width: 100%;
+.body{
+    padding:.5rem;
+
+    img{
+        max-width: 180px;
+        @include MQ(M){
+            max-width: 220px;
+
+        }
+        @include MQ(L){
+            max-width: 100%;
+
+        }
+        
+    
+    }
 }
