--- a/block2/monster_faces/partials/_main.scss
+++ b/block2/monster_faces/partials/_main.scss
@@ -7,17 +7,17 @@ Main Styling
 // Layout for the block sections
 .body_container, .face_container{
   border-radius: 10px;
-  max-width: 200%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
-  align-items: stretch;
+  align-items: center;
   justify-items: center;
   margin: 1rem;
-  padding: 0;
   overflow: scroll;
   background-color: #7fffd4;
+
   @include MQ(L){
-    margin:0 auto;
+    margin:1rem auto;
     max-width: 85%;
 }
 }
